add user category interface
